# Battle-Cats-Complete

./: .gitignore  Cargo.toml  README.md  keys.json
.github/workflows/: draft_release.yml  sync_public.yml
crates/bc_crypto/: Cargo.toml
sanitized/: README.md
sanitized/.github/workflows/: release.yml
sanitized/src/import_data/: game_data.rs  mod.rs
src/: .gitignore  app.rs  definitions.rs  main.rs  patterns.rs  updater.rs
src/app/: frame.rs
src/cat_data/: abilities.rs  cat.rs  definitions.rs  list.rs  mod.rs  scanner.rs  sprites.rs  stats.rs
src/cat_data/cat/: block.rs  mod.rs  name.rs  utils.rs
src/core/: patterns.rs  utils.rs
src/core/addons/: addondownload.rs  manager.rs  mod.rs  toolpaths.rs
src/core/anim/: animator.rs  animator_old.rs  bounds.rs  canvas.rs  center.rs  controls.rs  export.rs  mod.rs  smooth.rs  transform.rs  transform1.rs
src/core/cat/: abilities.rs  abilities_core.rs  loader.rs  mod.rs  scanner.rs  talents.rs  watcher.rs
src/core/files/: SkillAcquisition.rs  SkillLevel.rs  img015.rs  mod.rs  skilldescriptions.rs  unitbuy.rs  unitevolve.rs  unitid.rs
src/dev/: decrypt.rs  dumping_guide.md  extract_data.rs  guide.md  keys.rs  mod.rs  modpack.rs
src/features/: mod.rs
src/global/: abilities.rs  assets.rs  img015.rs  img022.rs  mod.rs  patterns.rs  resolver.rs
src/import_data/: crypto.rs  game_data.rs  game_data_dev.rs  game_data_pub.rs  global.rs  mod.rs  mod_dev.rs  sort.rs
src/main_menu/: mod.rs
src/paths/: cat.rs
src/settings/: lang.rs  mod.rs
src/unit_data/: list.rs  mod.rs  scanner.rs
xtask/src/: main.rs
(+193 files in other folders)
