[package]
name = "Battle_Cats_Complete"
version = "0.2.2"
edition = "2024"

[workspace]
members = [
    ".",
    "crates/bc_crypto"
]

[features]
default = ["dev"]
dev = ["dep:bc_crypto"]

[dependencies]
# GUI framework
eframe = { version = "0.29", features = ["persistence"] }
# Handles icon/images
image = { version = "0.25", features = ["png", "ico"] }
# Handles file dialogs
rfd = "0.15"
# Handles file archives
zip = "0.6"
# Handles sorting
regex = "1"
# Handles multi-threading
rayon = "1.10"
# Handles persistance
serde = { version = "1", features = ["derive"] }
# Handles cryptography
bc_crypto = { path = "crates/bc_crypto", optional = true }

[profile.release]
strip = true
opt-level = 3
lto = "thin"
panic = "abort"